Feat: Weather API integration with UI layout

--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -1,11 +1,13 @@
 TITLE=Weather Forecast
-INPUT_PLACEHOLDER=Was muss getan werden?
-CLEAR_COMPLETED=Erledigte Einträge entfernen
-ACTIVE_ITEMS=Aktive Einträge
-ACTIVE_ITEMS_CONTAINING=Aktive Einträge mit "{0}"
-COMPLETED_ITEMS=Erledigte Einträge
-COMPLETED_ITEMS_CONTAINING=Erledigte Einträge mit "{0}"
-ITEMS_CONTAINING=Einträge mit "{0}"
-LABEL_ALL=Alle
-LABEL_ACTIVE=Aktiv
-LABEL_COMPLETED=Erledigt
+CITY_COMBOBOX_PLACEHOLDER=Enter city...
+FEELS_LIKE=Feels Like
+HUMIDITY=Humidity
+MIN=Min
+MAX=Max
+CLOUDINESS=Cloudiness
+RAIN=Rain
+MM=mm
+ERROR_MESSAGE_PAGE_DESCRIPTION=Try seaching for city again!!!
+ERROR_MESSAGE_PAGE_RESULT_TEXT=No results found
+LIST_DESCRIPTION=Weather forecast data is for every 3 hrs
+DETAILS=Details
