--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,11 +1,13 @@
 TITLE=Weather Forecast
-INPUT_PLACEHOLDER=What needs to be done?
-CLEAR_COMPLETED=Clear completed
-ACTIVE_ITEMS=Active items
-ACTIVE_ITEMS_CONTAINING=Active items containing "{0}"
-COMPLETED_ITEMS=Completed items
-COMPLETED_ITEMS_CONTAINING=Completed items containing "{0}"
-ITEMS_CONTAINING=Items containing "{0}"
-LABEL_ALL=All
-LABEL_ACTIVE=Active
-LABEL_COMPLETED=Completed
+CITY_COMBOBOX_PLACEHOLDER=Enter city...
+FEELS_LIKE=Feels Like
+HUMIDITY=Humidity
+MIN=Min
+MAX=Max
+CLOUDINESS=Cloudiness
+RAIN=Rain
+MM=mm
+ERROR_MESSAGE_PAGE_DESCRIPTION=Try seaching for city again!!!
+ERROR_MESSAGE_PAGE_RESULT_TEXT=No results found
+LIST_DESCRIPTION=Weather forecast data is for every 3 hrs
+DETAILS=Details
